--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <!-- <li><a href="#">Portfolio</a></li> -->
           <li><a href="Contact me.html">Contact</a></li>
         </ul>
       </div>
@@ -33,7 +33,7 @@
         <div class="content">
           <p class="subtitle">HELLO</p>
           <h1 class="title">
-            I'm <span>Vamshi Reddy<br />a</span> Cloud Architect
+            I'm <span>Vamshi Reddy<br /></span> A Cloud Architect
           </h1>
           <p class="description">
             Welcome to my portfolio! I'm Vamshi Reddy, a dedicated Cloud Solutions Architect with a relentless passion for designing and implementing robust cloud-based solutions on Azure that drive business innovation and transformation.
