--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     
    <br>
         <h2>My Expertise:</h2>
-        <p>My expertise extends across a spectrum of cloud platforms and technologies, including Microsoft Azure, Amazon Web Services (AWS), and Google Cloud Platform (GCP). I have a deep understanding of cloud-native architectures, serverless computing, container orchestration, and data analytics. I am also well-versed in implementing robust DevOps practices to streamline development pipelines and ensure continuous integration and deployment.</p>
+        <p>My expertise extends across a spectrum of cloud platforms and technologies, including Microsoft Azure, Amazon Web Services (AWS). I have a deep understanding of cloud-native architectures, serverless computing, container orchestration, and data analytics. I am also well-versed in implementing robust DevOps practices to streamline development pipelines and ensure continuous integration and deployment.</p>
     
   </ol>
 </body>
