--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       </label>
       <input type="checkbox" name="check" id="check" />
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <!-- <li><a href="#">Portfolio</a></li> -->
